removed webpack and added compressed.js instead

--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,6 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-    <script src="db.js"></script>
-    <script src="dist/bundle.js"></script>
     <script type="text/javascript">
         (function() {
             if ("serviceWorker" in navigator) {
@@ -60,6 +58,13 @@
 
         })();
     </script>
+    <!-- <script src="db.js"></script> -->
+    <!-- <script src="index.js"></script> -->
+    <!-- <script src="dist/db.bundle.js"></script> -->
+    <!-- <script src="dist/index.bundle.js"></script> -->
+    <script src="dist/compressed.js"></script>
+
+
 </body>
 
 </html>
