--- a/public/index.html
+++ b/public/index.html
@@ -58,12 +58,8 @@
 
         })();
     </script>
-    <!-- <script src="db.js"></script> -->
-    <!-- <script src="index.js"></script> -->
-    <!-- <script src="dist/db.bundle.js"></script> -->
-    <!-- <script src="dist/index.bundle.js"></script> -->
     <script src="dist/compressed.js"></script>
-
+    <!-- <script src="dist/bundle.js"></script> -->
 
 </body>
 
